Dark mode color problem solved

--- a/src/components/About/homeabout.css
+++ b/src/components/About/homeabout.css
@@ -16,7 +16,7 @@
   text-align: center;
   border-radius: 1.5rem;
   padding: 10px;
-  background-color: black;
+  background-color: rgb(55, 132, 226);
   color: white;
 }
 
@@ -30,7 +30,7 @@
 .about-para {
   font-size: 18px;
   font-weight: 400;
-  color: #505256;
+  /* color: #505256; */
   line-height: 30px;
   max-width: 550px;
 }
@@ -78,7 +78,7 @@
 .box-text {
   font-size: 17px;
   margin-bottom: 1.5rem;
-  color: #505256;
+  /* color: #505256; */
 }
 
 .box-link {
