--- a/src/components/TrustDevelopers/trustdevelopers.css
+++ b/src/components/TrustDevelopers/trustdevelopers.css
@@ -1,5 +1,5 @@
 h2{
-    color: grey;
+    color: rgb(58, 145, 220);
 }
 .trust-developers-container {
     text-align: center;
